crates/toon-schema/tests/compile_fail/unknown_field_in_example.stderr
error: example 1 contains unknown field 'extra' ; expected one of: field
 --> tests/compile_fail/unknown_field_in_example.rs:6:8
  |
6 | struct UnknownFieldInExample {
  |        ^^^^^^^^^^^^^^^^^^^^^
